--- a/fase1/fase1.html
+++ b/fase1/fase1.html
@@ -58,9 +58,12 @@
     </div>
 </div>
 <script src="../aventuras.js">
+
 </script>
 
 <script>
+    let playerX = 9;
+    let playerY = 11;
     addItemToMap("Poção", "../imgs/abacate.png", 9, 7);
     addItemToMap("Poção", "../imgs/abacate.png", 16, 15);
     addItemToMap("Poção", "../imgs/abacate.png", 9, 5);
