--- a/fase2/fase2.html
+++ b/fase2/fase2.html
@@ -51,10 +51,13 @@
         <button id="next-button">Próximo</button>
     </div>
 </div>
-<script>
-
-    
-</script>
 <script src="../aventuras.js"></script>
+
+<script>
+    let playerX = 15;
+    let playerY = 17;
+
+    addMonstroToMap("boss", "../imgs/boss.png", 8, 900, 13, 14);
+</script>
 </body>
 </html>
