--- a/fase1/fase1.html
+++ b/fase1/fase1.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aventuras Incríveis</title>
     <link rel="stylesheet" href="fase1.css">
+    <audio id="background-music" src="path/to/your/music/file.mp3" loop></audio>
+
 </head>
 <body>
 <div id="background-image"></div>
