--- a/fase2/fase2.html
+++ b/fase2/fase2.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="fase2.css">
 </head>
 <body>
-
- <audio id="minhaMusica" controls autoplay>
-      <source src="../Bossa Nova Music Pack - Bell Kalengar.mp3" type="audio/mpeg">
-        Seu navegador não suporta o elemento de áudio.
-    </audio>     
+    <audio id="morteAudio" src="../morteProtagonista.mp3" type="audio/mpeg"  volume="0.5"></audio>
 
 
 <div id="background-image"></div>
@@ -55,33 +51,16 @@
         <button id="next-button">Próximo</button>
     </div>
 </div>
+
+
 <script src="aventuras2.js"></script>
 
 <script>
 
-window.addEventListener('load', function() {
-            var audio = document.getElementById('minhaMusica');
-            var playPromise = audio.play();
-
-            if (playPromise !== undefined) {
-                playPromise.then(function() {
-                    console.log('Reprodução automática bem-sucedida.');
-                }).catch(function(error) {
-                    console.log('Reprodução automática foi bloqueada:', error);
-                    // Tente novamente em uma interação do usuário
-                    document.body.addEventListener('click', function() {
-                        audio.play();
-                    }, { once: true });
-                });
-            }
-        });
-
-
     let playerX = 17;
     let playerY = 24;
     addItemToMap("Poção", "../imgs/abacate.png", 9, 7);
-    addItemToMap("Poção", "../imgs/abacate.png", 16, 15);
-    addItemToMap("Poção", "../imgs/abacate.png", 14, 8);
+
     addItemToMap("Poção", "../imgs/abacate.png", 7, 13);
     addItemToMap("Poção", "../imgs/abacate.png", 9, 5);
 
